# FR_ST_Test

./: .gitignore
11/: CMakeLists.txt  README.md  automate.sh  run_validate_11.sh
11/config/: .gitignore  README.md  fr.py  requirements.txt
11/config/alignment/: alignmentMain.py  utils.py
11/config/detection/: detectorMain.py  utils.py
11/config/recognition/: analyzeInput.py  modelsTF.py  recoginationMain.py  utils.py  vggfaceTF.py
11/input/: enroll.txt  match_multiperson.txt
11/lib/pkgconfig/: python-3.8-embed.pc  python-3.8.pc
11/lib/python3.8/: _sysconfigdata__linux_x86_64-linux-gnu.py
11/scripts/: build_null_impl.sh  compile_and_link.sh  run_testdriver.sh
11/src/first_implementation/: CMakeLists.txt  firstimplfrvt11.cpp  firstimplfrvt11.h
11/src/include/: frvt11.h
11/src/nullImpl/: CMakeLists.txt  nullimplfrvt11.cpp  nullimplfrvt11.h
11/src/testdriver/: CMakeLists.txt  validate11.cpp
1N/: CMakeLists.txt  README.md  run_validate_1N.sh
1N/input/: enroll_1N.txt  search_1N_multiperson.txt
1N/scripts/: compile_and_link.sh  run_testdriver.sh
1N/src/include/: frvt1N.h
1N/src/nullImpl/: CMakeLists.txt  nullimplfrvt1N.cpp  nullimplfrvt1N.h
1N/src/testdriver/: CMakeLists.txt  validate1N.cpp
common/scripts/: count_threads.sh  install_packages.sh  utils.sh
common/src/include/: frvt_structs.h  util.h
morph/: CMakeLists.txt  README.md  run_validate_morph.sh
morph/scripts/: compile_and_link.sh  run_testdriver.sh
quality/: CMakeLists.txt  README.md  run_validate_quality.sh
quality/scripts/: compile_and_link.sh  run_testdriver.sh
(+21 files in other folders)
